--- a/snippets/product-breadcrumbs.liquid
+++ b/snippets/product-breadcrumbs.liquid
@@ -1,7 +1,3 @@
-{% if template == 'list-collections' %}
-  {% assign collection = collections['all'] %}
-{% endif %}
-
 {% liquid
   assign parent_link = null
   for link in menu.links
@@ -21,4 +17,4 @@
   endfor
 %}
 
-<div class="flex space-x-1">{% if parent_link %}<a href={{ parent_link.url }} class="uppercase hover:underline">{{ parent_link.title }}</a><span>•</span>{% endif %}<h1>{{ collection.title }}</h1></div>
+<div class="flex space-x-1">{% if parent_link %}<a href={{ parent_link.url }} class="uppercase text-link">{{ parent_link.title }}</a><span>•</span>{% endif %}<a class="text-link" href="{{ collection.url }}">{{ collection.title }}</a></div>
