fix theme check errors

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -97,7 +97,7 @@
 
 
 <div class="header-wrapper h-header pb-3">
-  <header class="header relative h-full bg-white padding-x grid grid-cols-12 gap-gutter items-center drawer-menu{% if section.settings.menu != blank %} header--has-menu{% endif %}{% if has_app_block %} header--has-app{% endif %}{% if social_links %} header--has-social{% endif %}{% if shop.customer_accounts_enabled %} header--has-account{% endif %}{% if localization_forms %} header--has-localizations{% endif %}">
+  <header class="header relative h-full bg-white padding-x grid grid-cols-12 gap-gutter items-center drawer-menu{% if section.settings.menu != blank %} header--has-menu{% endif %}{% if has_app_block %} header--has-app{% endif %}{% if shop.customer_accounts_enabled %} header--has-account{% endif %}{% if localization_forms %} header--has-localizations{% endif %}">
 
     {%- liquid
       if section.settings.menu != blank
