--- a/sections/main-page-designers.liquid
+++ b/sections/main-page-designers.liquid
@@ -12,7 +12,7 @@
     <ul class="lg:col-start-3 md:col-span-2 collections-page__buttons-list">
       {% for collection in collection_list %}
         {% assign this_first_letter = collection.title.first | downcase %}
-        <li {% unless forloop.first or previous_first_letter == this_first_letter%}class="mt-text-line"{% endunless %} ><h2><a href="{{ collection.url }}" class="collections-page__button" data-index="{{ forloop.index }}">{{ collection.title }}</a></h2></li>
+        <li {% unless forloop.first or previous_first_letter == this_first_letter %}class="mt-text-line"{% endunless %} ><h2><a href="{{ collection.url }}" class="collections-page__button" data-index="{{ forloop.index }}">{{ collection.title }}</a></h2></li>
         {% assign previous_first_letter = this_first_letter %}
       {% endfor %}
     </ul>
@@ -98,7 +98,9 @@ if (!customElements.get('page-collections')) {
   "name": "Collections",
   "tag": "section",
   "enabled_on": {
-    "templates": ["page"]
+    "templates": [
+      "page"
+    ]
   },
   "settings": [
     {
