--- a/assets/tailwind-output.css
+++ b/assets/tailwind-output.css
@@ -1037,24 +1037,24 @@ body .shopify-policy__body {
   right: 0rem;
 }
 
-.right-3 {
-  right: 0.75rem;
-}
-
 .right-4 {
   right: 1rem;
+}
+
+.right-\[11px\] {
+  right: 11px;
 }
 
 .top-0 {
   top: 0rem;
 }
 
-.top-3 {
-  top: 0.75rem;
-}
-
 .top-4 {
   top: 1rem;
+}
+
+.top-\[10px\] {
+  top: 10px;
 }
 
 .top-full {
@@ -1065,24 +1065,16 @@ body .shopify-policy__body {
   top: var(--header-height);
 }
 
-.top-2 {
-  top: 0.5rem;
+.right-5 {
+  right: 1.25rem;
 }
 
-.right-\[0\.6875rem\] {
-  right: 0.6875rem;
+.bottom-4 {
+  bottom: 1rem;
 }
 
-.top-\[0\.625rem\] {
-  top: 0.625rem;
-}
-
-.right-\[11px\] {
-  right: 11px;
-}
-
-.top-\[10px\] {
-  top: 10px;
+.left-5 {
+  left: 1.25rem;
 }
 
 .isolate {
@@ -1188,10 +1180,6 @@ body .shopify-policy__body {
   margin-bottom: 6.25rem;
 }
 
-.mb-50 {
-  margin-bottom: 12.5rem;
-}
-
 .mb-6 {
   margin-bottom: 1.5rem;
 }
@@ -1240,10 +1228,6 @@ body .shopify-policy__body {
   margin-top: 0.75rem;
 }
 
-.mt-35 {
-  margin-top: 8.75rem;
-}
-
 .mt-4 {
   margin-top: 1rem;
 }
@@ -1256,16 +1240,16 @@ body .shopify-policy__body {
   margin-top: 1.5rem;
 }
 
-.mt-9 {
-  margin-top: 2.25rem;
-}
-
 .mt-gutter {
   margin-top: 10px;
 }
 
 .mt-text-line {
   margin-top: 1rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
 }
 
 .block {
@@ -1324,6 +1308,10 @@ body .shopify-policy__body {
   height: var(--header-height);
 }
 
+.h-80 {
+  height: 20rem;
+}
+
 .w-0 {
   width: 0rem;
 }
@@ -1365,6 +1353,14 @@ body .shopify-policy__body {
   width: 100%;
 }
 
+.w-16 {
+  width: 4rem;
+}
+
+.w-56 {
+  width: 14rem;
+}
+
 .max-w-\[max-content\] {
   max-width: -moz-max-content;
   max-width: max-content;
@@ -1372,6 +1368,18 @@ body .shopify-policy__body {
 
 .max-w-xs {
   max-width: 20rem;
+}
+
+.max-w-25 {
+  max-width: 6.25rem;
+}
+
+.max-w-\[20rem\] {
+  max-width: 20rem;
+}
+
+.max-w-\[6rem\] {
+  max-width: 6rem;
 }
 
 .flex-shrink {
@@ -1470,10 +1478,6 @@ body .shopify-policy__body {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
-.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-
 .grid-cols-5 {
   grid-template-columns: repeat(5, minmax(0, 1fr));
 }
@@ -1561,12 +1565,6 @@ body .shopify-policy__body {
   margin-left: calc(10px * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-y-25 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(6.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(6.25rem * var(--tw-space-y-reverse));
-}
-
 .space-y-text-line > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1593,10 +1591,6 @@ body .shopify-policy__body {
 
 .whitespace-nowrap {
   white-space: nowrap;
-}
-
-.rounded-\[50\%\] {
-  border-radius: 50%;
 }
 
 .border {
@@ -1654,10 +1648,6 @@ body .shopify-policy__body {
 
 .p-2 {
   padding: 0.5rem;
-}
-
-.p-3 {
-  padding: 0.75rem;
 }
 
 .p-4 {
@@ -2047,6 +2037,10 @@ body .shopify-pc__prefs__header-actions button {
 }
 
 @media (min-width: 640px) {
+  .sm\:left-auto {
+    left: auto;
+  }
+
   .sm\:col-span-3 {
     grid-column: span 3 / span 3;
   }
@@ -2083,6 +2077,10 @@ body .shopify-pc__prefs__header-actions button {
     width: 9.375rem;
   }
 
+  .sm\:w-56 {
+    width: 14rem;
+  }
+
   .sm\:grid-cols-12 {
     grid-template-columns: repeat(12, minmax(0, 1fr));
   }
@@ -2093,6 +2091,15 @@ body .shopify-pc__prefs__header-actions button {
 
   .sm\:gap-gutter {
     gap: 10px;
+  }
+
+  .sm\:border-l {
+    border-left-width: 1px;
+  }
+
+  .sm\:border-l-black {
+    --tw-border-opacity: 1;
+    border-left-color: rgb(0 0 0 / var(--tw-border-opacity));
   }
 }
 
