--- a/sections/email-popup.liquid
+++ b/sections/email-popup.liquid
@@ -1,14 +1,14 @@
 <email-popup class="" id="newsletter" data-delay="{{ 5000 }}" class="w-0 h-0">
-  {% form 'customer', class: 'newsletter-form', class: 'md:grid md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-6 fixed bottom-0 gap-gutter padding-x w-full z-20' %}
+  {% form 'customer', class: 'newsletter-form', class: 'fixed bottom-0 right-5 z-20' %}
     <div class="col-end-[-1] relative">
-      <div class="absolute w-full bottom-0 pb-4 email-popup z-20 email-popup__slider {% unless form.errors or form.posted_successfully? %} translate-y-full {% endunless %} focus-within:translate-y-0duration-200 transition-transform">
+      <div class="absolute w-56 h-80 bottom-0 right-0 pb-4 email-popup z-20 email-popup__slider {% unless form.errors or form.posted_successfully? %} translate-y-full {% endunless %} focus-within:translate-y-0duration-200 transition-transform">
 
-        <div class="border-black border bg-white p-4">
+        <div class="w-full h-full flex flex-col justify-between border-black border bg-white p-4">
           <button type="button" class="absolute right-4 top-4 block email-popup__close">{% render 'icon-close', class: "w-3 h-3" %}</button>
 
           <h5 class="uppercase">{{ section.settings.heading }}</h5>
 
-          <div class="mb-22 mt-18">{{ section.settings.body }}</div>
+          <div class="mb-4">{{ section.settings.body }}</div>
 
           <input type="hidden" name="contact[tags]" value="newsletter">
           <div class="field">
