--- a/snippets/buy-buttons.liquid
+++ b/snippets/buy-buttons.liquid
@@ -131,17 +131,22 @@
     </div>
   {%- endif -%}
 
-  {%- if shop.taxes_included or shop.shipping_policy.body != blank -%}
-    <div class="product__tax caption rte mt-4">
-      <small>
-        {%- if shop.taxes_included -%}
-          {{ 'products.product.include_taxes' | t }}
-        {%- endif -%}
-        {%- if shop.shipping_policy.body != blank -%}
-          {{ 'products.product.shipping_policy_html' | t: link: shop.shipping_policy.url }}
-        {%- endif -%}
-      </small>
-    </div>
+  {%- if show_shipping_taxes -%}
+    {%- if cart.taxes_included or shop.shipping_policy.body != blank -%}
+      <div class="product__tax caption rte mt-2">
+        <small>
+          {%- if cart.taxes_included and shop.shipping_policy.body != blank -%}
+              {{ 'sections.cart.taxes_included_and_shipping_policy_html' | t: link: shop.shipping_policy.url }}
+            {%- elsif cart.taxes_included -%}
+              {{ 'sections.cart.taxes_included_but_shipping_at_checkout' | t }}
+            {%- elsif shop.shipping_policy.body != blank -%}
+              {{ 'sections.cart.taxes_and_shipping_policy_at_checkout_html' | t: link: shop.shipping_policy.url }}
+            {%- else -%}
+              {{ 'sections.cart.taxes_and_shipping_at_checkout' | t }}
+            {%- endif -%}
+        </small>
+      </div>
+    {%- endif -%}
   {%- endif -%}
 
   {%- if show_pickup_availability -%}
