--- a/snippets/product-breadcrumbs.liquid
+++ b/snippets/product-breadcrumbs.liquid
@@ -15,6 +15,12 @@
     endif
 
   endfor
+  assign designer_handle = product.vendor | handleize
+  if collection.handle == designer_handle
+    unless parent_link
+      assign parent_link = pages['designers']
+    endunless
+  endif
 %}
 
-<div class="flex space-x-1">{% if parent_link %}<a href={{ parent_link.url }} class="uppercase text-link">{{ parent_link.title }}</a><span>•</span>{% endif %}<a class="text-link" href="{{ collection.url }}">{{ collection.title }}</a></div>
+<div class="flex space-x-1 mb-text-line">{% if parent_link %}<a href={{ parent_link.url }} class="uppercase text-link">{{ parent_link.title }}</a><span>•</span>{% endif %}<a class="text-link" href="{{ collection.url }}">{{ collection.title }}</a></div>
