--- a/snippets/pdp-slider.liquid
+++ b/snippets/pdp-slider.liquid
@@ -1,4 +1,6 @@
+{% # theme-check-disable RemoteAsset %}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+{% # theme-check-enable RemoteAsset %}
 
 <script type="application/javascript">
   loadDynamicScriptTag("https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js", function() { document.dispatchEvent(new Event('swiperLoaded')); })
