--- a/sections/cart-notification-product.liquid
+++ b/sections/cart-notification-product.liquid
@@ -13,10 +13,10 @@
         </div>
       {%- endif -%}
       <div>
-        {%- if settings.show_vendor -%}
-          <p class="caption-with-letter-spacing light">{{ item.product.vendor }}</p>
+        {%- if item.product.metafields.custom.designer_collection != blank -%}
+          <p class="caption-with-letter-spacing light">{{ item.product.metafields.custom.designer_collection.value.title }}</p>
         {%- endif -%}
-        <h3 class="cart-notification-product__name h4">{{ item.product.title | escape }}</h3>
+        <h3 class="cart-notification-product__name h4">{{ item.product.metafields.custom.designer_collection.value.title | escape }}</h3>
         <dl>
           {%- unless item.product.has_only_default_variant -%}
             {%- for option in item.options_with_values -%}
