--- a/snippets/cart-drawer.liquid
+++ b/snippets/cart-drawer.liquid
@@ -113,13 +113,11 @@
                       <tr id="CartDrawer-Item-{{ item.index | plus: 1 }}" class="cart-item flex justify-between" role="row">
 
                         <td class="cart-item__details" role="cell" headers="CartDrawer-ColumnProduct">
-                          {% if item.product.vendor != blank %}
-                            {% capture handle %}{{ item.product.vendor | handleize }}{% endcapture %}
-                            {% assign vendor_collection = collections[handle]%}
-                            <p class="text-gray product-card--vendor">
-                              {% if vendor_collection != blank %}<a class="hover:underline" href="{{ vendor_collection.url }}">{% endif %}
-                                {{ item.product.vendor }}
-                              {% if vendor_collection != blank %}</a>{% endif %}
+                          {% if item.product.metafields.custom.designer_collection != blank %}
+                            <p class="text-gray">
+                              <a class="hover:underline" href="{{ item.product.metafields.custom.designer_collection.value.url }}">
+                                {{ item.product.metafields.custom.designer_collection.value.title }}
+                              </a>
                             </p>
                           {% endif %}
 
