--- a/sections/related-products.liquid
+++ b/sections/related-products.liquid
@@ -13,7 +13,7 @@
         {{ section.settings.heading }}
       </h2>
       <ul
-        class="w-full -mb-5 md:mb-0 pb-5 md:pb-0 overflow-x-scroll snap-x snap-mandatory flex md:grid md:grid-flow-dense md:grid-cols-4 space-x-gutter md:space-x-0 md:gap-x-gutter"
+        class="scrollbar-hide w-full overflow-x-scroll snap-x snap-mandatory flex md:grid md:grid-flow-dense md:grid-cols-4 space-x-gutter md:space-x-0 md:gap-x-gutter"
         role="list"
       >
         {% for recommendation in recommendations.products %}
