fix aspect ratio on pdp

--- a/snippets/pdp-slider.liquid
+++ b/snippets/pdp-slider.liquid
@@ -22,6 +22,7 @@
             {% render 'image', image: image,
               preload: true,
               fit: 'cover',
+              aspect_ratio: 0.8,
               sizes: "100vw, (min-width: 768px) 42vw"
             %}
           </li>
@@ -29,7 +30,7 @@
       </ul>
 
     </div>
-    <div class="pdp-slider__thumbs hidden lg:block mt-gutter">
+    <div class="pdp-slider__thumbs hidden {% if product.media.size > 2 %} lg:block{% endif %} mt-gutter">
       <ul class="flex swiper-wrapper" role="list">
         {%- for image in product.images -%}
           <li id="Slide-{{ section.id }}-{{ image.id }}" data-media-position="{{ forloop.index0 }}" class="relative swiper-slide">
