increase drawer cart items gap

--- a/snippets/cart-drawer.liquid
+++ b/snippets/cart-drawer.liquid
@@ -108,7 +108,7 @@
                     </tr>
                   </thead>
 
-                  <tbody role="rowgroup" class="grid grid-cols-1 gap-gutter w-full">
+                  <tbody role="rowgroup" class="grid grid-cols-1 gap-y-4 w-full">
                     {%- for item in cart.items -%}
                       <tr id="CartDrawer-Item-{{ item.index | plus: 1 }}" class="cart-item flex justify-between" role="row">
 
