--- a/assets/tailwind-output.css
+++ b/assets/tailwind-output.css
@@ -1491,6 +1491,10 @@ body .shopify-policy__body {
   gap: 10px;
 }
 
+.gap-7 {
+  gap: 1.75rem;
+}
+
 .gap-x-gutter {
   -moz-column-gap: 10px;
        column-gap: 10px;
@@ -1506,6 +1510,23 @@ body .shopify-policy__body {
 
 .gap-y-6 {
   row-gap: 1.5rem;
+}
+
+.gap-x-7 {
+  -moz-column-gap: 1.75rem;
+       column-gap: 1.75rem;
+}
+
+.gap-y-7 {
+  row-gap: 1.75rem;
+}
+
+.gap-y-5 {
+  row-gap: 1.25rem;
+}
+
+.gap-y-4 {
+  row-gap: 1rem;
 }
 
 .space-x-1 > :not([hidden]) ~ :not([hidden]) {
