fix breadcrumbs spacing

--- a/sections/main-collection-header.liquid
+++ b/sections/main-collection-header.liquid
@@ -6,7 +6,7 @@
   {{ 'component-rte.css' | asset_url | stylesheet_tag }}
 {% endif %}
 
-<div class="padding-x mb-2">
+<div class="padding-x mb-text-line">
   {% if collection.description.size > 0 %}
     <h1 class="underline">{{ collection.title }}</h1>
     <div class="sm:grid sm:grid-cols-2 md:grid-cols-3 gap-gutter mt-text-line mb-9"><div class="md:col-span-2 lg:col-span-1 rte">{{ collection.description }}</div></div>
