--- a/assets/component-cart-items.css
+++ b/assets/component-cart-items.css
@@ -12,7 +12,10 @@
 }
 
 .cart-items tbody {
+  display: grid;
+  grid-template-columns: 1fr;
   width: 100%;
+  row-gap: 16px;
 }
 
 .cart-item__quantity-wrapper {
