--- a/snippets/cart-drawer.liquid
+++ b/snippets/cart-drawer.liquid
@@ -106,7 +106,7 @@
                       </tr>
                     </thead>
 
-                  <tbody role="rowgroup" class="grid grid-cols-1 gap-y-4 w-full">
+                  <tbody role="rowgroup">
                     {%- for item in cart.items -%}
                       <tr id="CartDrawer-Item-{{ item.index | plus: 1 }}" class="cart-item flex justify-between" role="row">
 
