--- a/snippets/pdp-slider.liquid
+++ b/snippets/pdp-slider.liquid
@@ -1,4 +1,6 @@
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+{% comment %}theme-check-disable RemoteAsset{% endcomment %}
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+{% comment %}theme-check-enable RemoteAsset{% endcomment %}
 
 <script type="application/javascript">
   loadDynamicScriptTag("https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js", function() { document.dispatchEvent(new Event('swiperLoaded')); })
