--- a/snippets/pdp-slider.liquid
+++ b/snippets/pdp-slider.liquid
@@ -25,7 +25,7 @@
               preload: true,
               fit: 'cover',
               aspect_ratio: 0.8,
-              sizes: "100vw, (min-width: 768px) 42vw"
+              sizes: "(min-width: 768px) 42vw, 100vw"
             %}
           </li>
         {%- endfor -%}
