--- a/sections/homepage-items.liquid
+++ b/sections/homepage-items.liquid
@@ -1,8 +1,6 @@
 <div class="homepage-items block relative mb-6 md:mb-9">
   <div class="homepage-items__images padding-x pt-13 md:pt-15 grid grid-cols-6 md:grid-cols-24 grid-flow-row-dense gap-y-40 md:gap-y-0 gap-x-gutter">
     {% for block in section.blocks %}
-      {% capture sizes %}(min-width: 768px) {{ block.settings.desktop_width }}vw, {{ block.settings.mobile_width }}vw{% endcapture %}
-
       {% liquid
         if block.settings.image
           assign image = block.settings.image
@@ -10,7 +8,15 @@
           assign image = block.settings.url.object.featured_image
         endif
         assign text = block.settings.text | default: block.settings.url.object.title
+        assign preload = false
+        if section.index == 1 and forloop.index < 4
+          assign preload = true
+        endif
+        assign mobile_percent = block.settings.mobile_col_span | divided_by: 6.0 | times: 100 | ceil
+        assign desktop_percent = block.settings.mobile_col_span | divided_by: 24.0 | times: 100 | ceil
       %}
+
+      {% capture sizes %}(min-width: 768px) {{ desktop_percent }}vw, {{ mobile_percent }}vw{% endcapture %}
 
       <div class="homepage-items__block" data-index="{{ forloop.index }}">
         <style>
@@ -33,7 +39,7 @@
           <a class="block" href="{{ block.settings.url }}" title="{{ text }}">
         {% endif %}
           <figure class="w-full">
-            {% render 'image', image: image, wrapper_class: "w-full", class: "w-full", padding_bottom: true, sizes: sizes %}
+            {% render 'image', image: image, preload: preload, wrapper_class: "w-full", class: "w-full", padding_bottom: true, sizes: sizes %}
             <figcaption class="block uppercase hover:underline mt-gutter">{{ text }}</figcaption>
           </figure>
 
