about page changes and fix homepage tiles image sizing bug

--- a/assets/component-rte.css
+++ b/assets/component-rte.css
@@ -56,3 +56,12 @@
 .rte blockquote {
   display: inline-flex;
 }
+
+.rte a {
+  text-decoration: underline;
+}
+
+.rte a:hover {
+  text-decoration: none;
+}
+
