--- a/assets/tailwind-output.css
+++ b/assets/tailwind-output.css
@@ -703,10 +703,6 @@ body .shopify-policy__body {
   margin-top: 2.25rem;
 }
 
-.rte a:hover {
-  text-decoration-line: underline;
-}
-
 .rte p, .rte ul, .rte ol, .rte table, .rte blockquote {
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -983,6 +979,10 @@ body .shopify-policy__body {
 }
 
 .text-link:hover {
+  text-decoration-line: underline;
+}
+
+.child-text-links a:hover {
   text-decoration-line: underline;
 }
 
@@ -1530,6 +1530,10 @@ body .shopify-policy__body {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
+.justify-self-end {
+  justify-self: end;
 }
 
 .overflow-hidden {
