--- a/snippets/header-drawer.liquid
+++ b/snippets/header-drawer.liquid
@@ -83,6 +83,18 @@
                                             </a>
                                           </li>
                                         {%- endfor -%}
+                                        <li>
+                                          <a
+                                            id="HeaderDrawer-{{ link.handle }}-{{ childlink.handle }}"
+                                            href="{{ childlink.url }}"
+                                            class="link text-link list-menu__item focus-inset{% if childlink.current %} nav-link-current{% endif %}"
+                                            {% if childlink.current %}
+                                              aria-current="page"
+                                            {% endif %}
+                                          >
+                                            All {{ childlink.title | escape }}
+                                          </a>
+                                        </li>
                                       </ul>
                                     </div>
                                   </details>
